--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -332,7 +332,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
